11-gatekeeper/solutions/istioGatewayOnlyAllowedHosts/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: IstioGatewayOnlyAllowedHosts
metadata:
  name: isito-gateway-only-allowed-hosts
spec:
  match:
    kinds:
      - apiGroups: ["networking.istio.io"]
        kinds: ["Gateway"]
