11-gatekeeper/solutions/istioGatewayOnlyAllowedHosts/tests/inventory_namespace_violation.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    hosts: |
      {
        "notallowed": [
        "http.test.com",
        "tcp.test.com"
        ]
      }  
  labels:
    istio.io/rev: default
    kubernetes.io/metadata.name: demo
  name: demo
